@@ -1,12 +1,15 @@
-FROM maven:3.6.1-jdk-11-slim as maven
+FROM maven:3.8.6-openjdk-18-slim as maven
 WORKDIR /redkale
 COPY src src
 COPY conf conf
 COPY pom.xml pom.xml
 RUN mvn package -q
 
-FROM openjdk:12
+FROM openjdk:21-jdk-slim
 WORKDIR /redkale
 COPY conf conf
-COPY --from=maven /redkale/target/redkale-benchmark-0.0.1.jar redkale-benchmark.jar
-CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-DAPP_HOME=./", "-jar", "redkale-benchmark.jar"]
+COPY --from=maven /redkale/target/redkale-benchmark-1.0.0.jar redkale-benchmark.jar
+
+EXPOSE 8080
+
+CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-DAPP_HOME=./", "-jar", "redkale-benchmark.jar"]
