@@ -1,13 +1,14 @@
-FROM gradle:5.4.1-jdk11
+FROM gradle:8.4.0-jdk21
 USER root
 WORKDIR /http4k
-COPY build.gradle build.gradle
-COPY settings.gradle settings.gradle
-COPY apache apache
+COPY build.gradle.kts build.gradle.kts
+COPY settings.gradle.kts settings.gradle.kts
 COPY core core
-COPY jetty jetty
-COPY ktorcio ktorcio
-COPY netty netty
-COPY undertow undertow
-RUN gradle --quiet build jetty:shadowJar
-CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-XX:+AlwaysPreTouch", "-jar", "jetty/build/libs/http4k-jetty-benchmark.jar"]
+COPY core-jdbc core-jdbc
+COPY core-pgclient core-pgclient
+COPY sunhttp sunhttp
+RUN gradle --quiet --no-daemon sunhttp:shadowJar
+
+EXPOSE 9000
+
+CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AlwaysPreTouch", "-jar", "sunhttp/build/libs/http4k-benchmark.jar"]
